Scrollbar track and navbar class fix

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -119,7 +119,12 @@ select {
 }
 
 :not(#scrollable)::-webkit-scrollbar-track {
-  background: transparent;
+  background: #ebf3f5;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
 }
 
 :not(#scrollable)::-webkit-scrollbar-thumb {
